# mindbridge

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.json  .tool-versions  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
config/: redis.conf
migrations/: env.py
migrations/versions/: 2ec9b2e8a63e_initial_database_setup_with_repository_.py
scripts/: docker-setup.sh  init-db.sql
src/mindbridge/: __about__.py  __init__.py  main.py
src/mindbridge/api/: __init__.py  health.py  metrics.py
src/mindbridge/cache/: __init__.py  exceptions.py  redis_cache.py
src/mindbridge/database/: __init__.py  connection.py  health.py  models.py
src/mindbridge/jobs/: __init__.py  celery_app.py  celery_config.py  exceptions.py
src/mindbridge/observability/: __init__.py  logging_config.py  tracing.py
tests/: __init__.py  conftest.py  test_basic.py  test_main.py
tests/api/: test_health.py
tests/database/: __init__.py  test_connection.py  test_health.py  test_models.py  test_vector_operations.py
tests/jobs/: __init__.py  test_celery_config.py
tests/observability/: __init__.py  test_logging.py  test_tracing.py
